# access-iq-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  cdk.context.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-networking/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-VALIDATION.md
.streamlit/: config.toml  secrets.toml.example
access-iq-platform/tests/unit/: test_cli.py  (edit)
config/: dev.json
dashboard/: README.md  app.py  pyproject.toml  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/lib/: charts.py  data.py  s3.py
dashboard/pages/: 1_wait_times.py  2_inequality.py  3_urgent_care.py
data/gold/dim_date/export_date=2025-01-15/: part-00000.parquet
data/gold/dim_ethnicity/export_date=2025-01-15/: part-00000.parquet
data/gold/dim_imd/export_date=2025-01-15/: part-00000.parquet
data/gold/dim_patient/export_date=2025-01-15/: part-00000.parquet
data/gold/dim_site/export_date=2025-01-15/: part-00000.parquet
data/gold/dim_specialty/export_date=2025-01-15/: part-00000.parquet
data/gold/fct_inequality/export_date=2025-01-15/: part-00000.parquet
dbt/: README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
dbt/macros/: add_spectrum_partitions.sql  backfill_spectrum_partitions.sql  check_ge_gate.sql  convert_tz.sql  create_external_schema.sql  get_ingest_dates.sql  hmac_pseudonymise.sql  nhs_mod11_check.sql  refresh_external_table.sql  sii_rii.sql
dbt/models/bronze/: sources.yml
dbt/models/gold/: _gold_models.yml  dim_date.sql  dim_ethnicity.sql  dim_imd.sql  dim_patient.sql  dim_site.sql  dim_specialty.sql  fct_inequality.sql  fct_urgent_care.sql  fct_utilisation.sql  fct_wait_times.sql
dbt/models/silver/: _silver_models.yml  _silver_sources.yml  appointments.sql  diagnoses.sql  diagnostics_orders.sql  encounters.sql  patients.sql  providers.sql  referrals.sql  urgent_care.sql
dbt/models/silver/keys/: patient_identifiers.sql
dbt/models/silver/quarantine/: patients_quarantine.sql
dbt/scripts/: run_ge_gate.py
dbt/seeds/: lsoa_imd_lookup.csv  seed_ethnicity_ons.csv  seed_icd10.csv  seed_imd.csv
docs/: case-study.md  data-dictionary.md
docs/adr/: 0003-kms-cmk-on-lake.md  0004-12factor-config.md  ADR-001-medallion-architecture.md  ADR-002-uv-workspace.md  ADR-003-kms-cmk-on-lake.md  ADR-004-ephemeral-infrastructure.md  ADR-005-dq-scope.md  ADR-005-ecs-fargate-ingestion.md  ADR-006-dim-commissioner-dropped.md  ADR-007-dq-scope.md  ADR-007-ecs-fargate-ingestion.md  ADR-008-medallion-architecture.md  ADR-008-static-gold-export.md  ADR-009-redshift-serverless.md  ADR-009-self-hosted-prefect.md  ADR-010-self-hosted-prefect.md  ADR-011-static-gold-export.md  ADR-012-nat-ephemeral.md  ADR-013-trust-side-sftp.md  ADR-014-uv-workspace.md  ADR-015-two-account-staging.md  ADR-016-ephemeral-infrastructure.md
docs/architecture/: environment_matrix.md  prefect_setup.md
docs/engagement/: 00_context.md  01_scope_success.md  03_metric_definitions.md  04_risks_assumptions.md  05_delivery_plan.md  06_traceability.md
docs/engagement/02_data_contracts/: diagnostics_orders_data_contract.md  ehr_data_contract.md  provider_site_data_contract.md  sftp_appointments_data_contract.md  urgent_care_contract.md
docs/governance/: asset-register.md  data-flow-map.md  runbook.md
docs/images/: architecture-dataflow.mmd  architecture-infra.mmd
docs/profiling/: diagnostics_orders.html  encounters.html  patient_demographics.html  referrals.html  urgent_care_logs.html
docs/security/: pseudonymisation.md
flows/: Dockerfile  README.md  prefect.yaml  pyproject.toml
flows/access_iq_flows/: __init__.py  alerts.py  daily_ingest.py  dbt_tasks.py  export_tasks.py  ge_tasks.py  repartition_task.py
infra/: app.py  cdk.json  pyproject.toml  requirements-dev.txt
infra/access_iq_infra/: lake_layout.py  settings.py  tagging.py
infra/access_iq_infra/stacks/: __init__.py  budget.py  catalog.py  compute.py  connectivity_test.py  core.py  ecr.py  iam.py  lake.py  network.py  observability.py  s3.py  secrets.py  warehouse.py
infra/config/: dev.json  dev.json.example  prod.json  prod.json.example
infra/lambda/alert_formatter/: index.py
scripts/: connectivity_test.py  generate_stub_gold.py  session.sh  test_snapshot_restore.sh  tunnel.sh
src/access_iq/: config.py  logging_config.py  pyproject.toml
src/access_iq/ingestion/: backfill.py  backfill_cli.py  cli.py  ehr_postgres.py  idempotency.py  manifests.py  postgres.py  repartition.py  sftp.py  trust_s3.py
src/access_iq/lambda/hmac_udf/: handler.py
src/access_iq/profiling/: __main__.py  data_dictionary.py  profile_bronze.py  readiness_gate.py  s3_discovery.py
src/access_iq/security/: __init__.py  pseudonymise.py
tests/integration/: conftest.py  test_compute.py  test_iam.py  test_networking.py  test_observability.py  test_storage.py  test_warehouse.py
tests/unit/: test_alerts.py  test_app_synth.py  test_backfill.py  test_budget_stack.py  test_catalog_stack.py  test_cli.py  test_compute_stack.py  test_daily_ingest.py  test_dashboard_data.py  test_dashboard_pages.py  test_dbt_tasks.py  test_ecr_stack.py  test_export_tasks.py  test_ge_gate.py  test_ge_results.py  test_ge_tasks.py  test_hmac_lambda.py  test_iam_stack.py  test_idempotency.py  test_idempotency_prefix.py  test_ingestion.py  test_lake_layout.py  test_lake_stack.py  test_manifest_schema.py  test_network_stack.py  test_nhs_mod11.py  test_observability_stack.py  test_postgres.py  test_postgres_manifest.py  test_profiling.py  test_pseudonymise.py  test_repartition.py  test_secrets_stack.py  test_settings.py  test_sftp.py  test_smoke.py  test_trust_s3.py  test_trust_s3_empty.py  test_warehouse_stack.py
(+3 files in other folders)
