[project]
name = "access-iq"
version = "0.1.0"
description = "NHS Trust access and inequality analytics platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aws-cdk-lib==2.236.0", "constructs==10.4.5"]

[project.optional-dependencies]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.13",
    "mypy==1.19.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]                   # handled by formatter/line-length

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--maxfail=1"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["access_iq"]
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
source = ["access_iq"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
