[project]
name = "access-iq-dashboard"
version = "0.1.0"
description = "Access-IQ Streamlit dashboard. Filled in Phase 8."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
