[project]
name = "access-iq-dashboard"
version = "0.1.0"
description = "Access-IQ Streamlit dashboard."
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41.0",
    "duckdb>=1.1.0,<2.0",
    "plotly>=5.24",
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
