[project]
name = "access-iq-dbt"
version = "0.1.0"
description = "Access-IQ dbt project (Silver staging + Gold marts). Filled in Phase 4."
requires-python = ">=3.12"
dependencies = [
    "dbt-redshift==1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
