[project]
name = "access-iq-flows"
version = "0.1.0"
description = "Access-IQ Prefect flows. Filled in Phase 7."
requires-python = ">=3.12"
dependencies = [
    "great-expectations>=1.17,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "redshift-connector>=2.1",
    "sqlalchemy-redshift>=0.8",
    "psycopg2-binary>=2.9",
    "boto3>=1.28",
    "structlog>=23.1",
    "prefect>=3.7,<4.0",
    "prefect-aws>=0.7,<1.0",
    "pyarrow>=14.0",
    "access-iq-ingestion",
    "dbt-redshift==1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
