[project]
name = "access-iq-infra"
version = "0.1.0"
description = "Access-IQ AWS CDK app (stateful + ephemeral stacks)."
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib==2.236.0",
    "constructs==10.4.5",
    "boto3==1.42.53",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["access_iq_infra"]
